[gd_scene load_steps=13 format=4 uid="uid://c6d0yy4y3cc1j"]

[ext_resource type="Texture2D" uid="uid://c41jkf66ip1it" path="res://assets/sprites/ground.png" id="1_0ilro"]
[ext_resource type="Script" uid="uid://ctqqb7wb3e18l" path="res://script/panda's_automatic_platformer's_death_scene.gd" id="1_6138s"]
[ext_resource type="Script" uid="uid://3inedt7vwkw7" path="res://script/camera_2d.gd" id="2_ngbor"]
[ext_resource type="Texture2D" uid="uid://d0eaivl1psmhn" path="res://assets/sprites/sprites/BUTTONS/Game over.png" id="3_ehmse"]
[ext_resource type="Texture2D" uid="uid://ubrtj7hs848b" path="res://assets/sprites/sprites/BUTTONS/Game over hover.png" id="4_f8osw"]
[ext_resource type="Texture2D" uid="uid://dl8fs7d20bvl" path="res://assets/sprites/sprites/BUTTONS/Go_Back.png" id="5_6138s"]
[ext_resource type="Texture2D" uid="uid://boqv7aiafy7od" path="res://assets/sprites/sprites/BUTTONS/Go_Back_hover.png" id="6_441kp"]
[ext_resource type="Texture2D" uid="uid://dvq3lyd46t8r7" path="res://assets/sprites/sprites/BUTTONS/RETRY.png" id="7_4wrcy"]
[ext_resource type="Texture2D" uid="uid://bdr50q07wh71q" path="res://assets/sprites/sprites/BUTTONS/RETRY hover.png" id="8_65nvh"]
[ext_resource type="PackedScene" uid="uid://b83hwoltxpxrq" path="res://scenes/fade_transition.tscn" id="10_441kp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_32nx1"]
texture = ExtResource("1_0ilro")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0

[sub_resource type="TileSet" id="TileSet_gqtj4"]
sources/0 = SubResource("TileSetAtlasSource_32nx1")

[node name="panda\'s_automatic_platformer\'s_death_scene" type="Node2D"]
script = ExtResource("1_6138s")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD4//7/AAAEAAAAAAD4////AAAFAAEAAAD4/wAAAAAFAAEAAAD4/wEAAAAFAAEAAAD5//7/AAAEAAAAAAD5////AAAFAAEAAAD5/wAAAAAFAAEAAAD5/wEAAAAFAAEAAAD6//7/AAAEAAAAAAD6////AAAFAAAAAAD6/wAAAAAFAAEAAAD6/wEAAAAFAAIAAAD7//7/AAAEAAAAAAD7////AAAFAAAAAAD7/wAAAAAFAAEAAAD7/wEAAAAFAAIAAAD8//7/AAAEAAAAAAD8////AAAFAAAAAAD8/wAAAAAFAAEAAAD8/wEAAAAFAAIAAAD9//7/AAAEAAAAAAD9////AAAFAAAAAAD9/wAAAAAFAAEAAAD9/wEAAAAFAAIAAAD+//7/AAAEAAAAAAD+////AAAFAAAAAAD+/wAAAAAFAAEAAAD+/wEAAAAFAAIAAAD///7/AAAEAAAAAAD/////AAAFAAAAAAD//wAAAAAFAAEAAAD//wEAAAAFAAIAAAAAAP7/AAAEAAAAAAAAAP//AAAFAAAAAAAAAAAAAAAFAAEAAAAAAAEAAAAFAAIAAAABAP7/AAAEAAAAAAABAP//AAAFAAAAAAABAAAAAAAFAAEAAAABAAEAAAAFAAIAAAACAP7/AAAEAAAAAAACAP//AAAFAAAAAAACAAAAAAAFAAEAAAACAAEAAAAFAAIAAAADAP7/AAAEAAAAAAADAP//AAAFAAAAAAADAAAAAAAFAAEAAAADAAEAAAAFAAIAAAAEAP7/AAAEAAAAAAAEAP//AAAFAAAAAAAEAAAAAAAFAAEAAAAEAAEAAAAFAAIAAAAFAP7/AAAEAAAAAAAFAP//AAAFAAAAAAAFAAAAAAAFAAEAAAAFAAEAAAAFAAIAAAAGAP7/AAAEAAAAAAAGAP//AAAFAAAAAAAGAAAAAAAFAAEAAAAHAP7/AAAEAAAAAAAHAP//AAAFAAAAAAAHAAAAAAAFAAEAAAD4/wIAAAAFAAMAAAD5/wIAAAAFAAMAAAD6/wIAAAAFAAMAAAD7/wIAAAAFAAMAAAD8/wIAAAAFAAMAAAD9/wIAAAAFAAMAAAD+/wIAAAAFAAMAAAD//wIAAAAFAAMAAAAAAAIAAAAFAAMAAAABAAIAAAAFAAMAAAACAAIAAAAFAAMAAAADAAIAAAAFAAMAAAAEAAIAAAAFAAMAAAAFAAIAAAAFAAMAAAAGAAIAAAAFAAMAAAAHAAIAAAAFAAMAAAD4/wMAAAAFAAMAAAD5/wMAAAAFAAMAAAD6/wMAAAAFAAMAAAD7/wMAAAAFAAMAAAD8/wMAAAAFAAMAAAD9/wMAAAAFAAMAAAD+/wMAAAAFAAMAAAD//wMAAAAFAAMAAAAAAAMAAAAFAAMAAAABAAMAAAAFAAMAAAACAAMAAAAFAAMAAAADAAMAAAAFAAMAAAAEAAMAAAAFAAMAAAAFAAMAAAAFAAMAAAAGAAMAAAAFAAMAAAAHAAMAAAAFAAMAAAAIAP7/AAAFAAAAAAD4//r/AAAEAAAAAAD4//v/AAAEAAAAAAD4//z/AAAEAAAAAAD4//3/AAAEAAAAAAD5//r/AAAEAAAAAAD5//v/AAAEAAAAAAD5//z/AAAEAAAAAAD5//3/AAAEAAAAAAD6//r/AAAEAAAAAAD6//v/AAAEAAAAAAD6//z/AAAEAAAAAAD6//3/AAAEAAAAAAD7//r/AAAEAAAAAAD7//v/AAAEAAAAAAD7//z/AAAEAAAAAAD7//3/AAAEAAAAAAD8//r/AAAEAAAAAAD8//v/AAAEAAAAAAD8//z/AAAEAAAAAAD8//3/AAAEAAAAAAD9//r/AAAEAAAAAAD9//v/AAAEAAAAAAD9//z/AAAEAAAAAAD9//3/AAAEAAAAAAD+//r/AAAEAAAAAAD+//v/AAAEAAAAAAD+//z/AAAEAAAAAAD+//3/AAAEAAAAAAD///r/AAAEAAAAAAD///v/AAAEAAAAAAD///z/AAAEAAAAAAD///3/AAAEAAAAAAAAAPr/AAAEAAAAAAAAAPv/AAAEAAAAAAAAAPz/AAAEAAAAAAAAAP3/AAAEAAAAAAABAPr/AAAEAAAAAAABAPv/AAAEAAAAAAABAPz/AAAEAAAAAAABAP3/AAAEAAAAAAACAPr/AAAEAAAAAAACAPv/AAAEAAAAAAACAPz/AAAEAAAAAAACAP3/AAAEAAAAAAADAPr/AAAEAAAAAAADAPv/AAAEAAAAAAADAPz/AAAEAAAAAAADAP3/AAAEAAAAAAAEAPr/AAAEAAAAAAAEAPv/AAAEAAAAAAAEAPz/AAAEAAAAAAAEAP3/AAAEAAAAAAAFAPr/AAAEAAAAAAAFAPv/AAAEAAAAAAAFAPz/AAAEAAAAAAAFAP3/AAAEAAAAAAAGAPr/AAAEAAAAAAAGAPv/AAAEAAAAAAAGAPz/AAAEAAAAAAAGAP3/AAAEAAAAAAAHAPr/AAAEAAAAAAAHAPv/AAAEAAAAAAAHAPz/AAAEAAAAAAAHAP3/AAAEAAAAAAAIAPr/AAAEAAAAAAAIAPv/AAAEAAAAAAAIAPz/AAAEAAAAAAAIAP3/AAAEAAAAAAD4/wQAAAAFAAMAAAD4/wUAAAAFAAMAAAD4/wYAAAAFAAMAAAD5/wQAAAAFAAMAAAD5/wUAAAAFAAMAAAD5/wYAAAAFAAMAAAD6/wQAAAAFAAMAAAD6/wUAAAAFAAMAAAD6/wYAAAAFAAMAAAD7/wQAAAAFAAMAAAD7/wUAAAAFAAMAAAD7/wYAAAAFAAMAAAD8/wQAAAAFAAMAAAD8/wUAAAAFAAMAAAD8/wYAAAAFAAMAAAD9/wQAAAAFAAMAAAD9/wUAAAAFAAMAAAD9/wYAAAAFAAMAAAD+/wQAAAAFAAMAAAD+/wUAAAAFAAMAAAD+/wYAAAAFAAMAAAD//wQAAAAFAAMAAAD//wUAAAAFAAMAAAD//wYAAAAFAAMAAAAAAAQAAAAFAAMAAAAAAAUAAAAFAAMAAAAAAAYAAAAFAAMAAAABAAQAAAAFAAMAAAABAAUAAAAFAAMAAAABAAYAAAAFAAMAAAACAAQAAAAFAAMAAAACAAUAAAAFAAMAAAACAAYAAAAFAAMAAAADAAQAAAAFAAMAAAADAAUAAAAFAAMAAAADAAYAAAAFAAMAAAAEAAQAAAAFAAMAAAAEAAUAAAAFAAMAAAAEAAYAAAAFAAMAAAAFAAQAAAAFAAMAAAAFAAUAAAAFAAMAAAAFAAYAAAAFAAMAAAAGAAQAAAAFAAMAAAAGAAUAAAAFAAMAAAAGAAYAAAAFAAMAAAAHAAQAAAAFAAMAAAAHAAUAAAAFAAMAAAAHAAYAAAAFAAMAAAAIAP//AAAFAAEAAAAIAAAAAAAFAAEAAAAIAAEAAAAFAAEAAAAIAAIAAAAFAAIAAAAIAAMAAAAFAAMAAAAIAAQAAAAFAAMAAAAIAAUAAAAFAAMAAAAIAAYAAAAFAAMAAAD3//r/AAAEAAAAAAD3//v/AAAEAAAAAAD3//z/AAAEAAAAAAD3//3/AAAEAAAAAAD3//7/AAAFAAAAAAD3/wIAAAAFAAIAAAD3/wMAAAAFAAMAAAD3/wQAAAAFAAMAAAD3/wUAAAAFAAMAAAD3/wYAAAAFAAMAAAD3////AAAFAAEAAAD3/wAAAAAFAAEAAAD3/wEAAAAFAAEAAAAGAAEAAAAFAAIAAAAHAAEAAAAFAAIAAAA=")
tile_set = SubResource("TileSet_gqtj4")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(9, 9)
limit_left = -77
limit_top = -44
limit_right = 77
limit_bottom = 44
position_smoothing_enabled = true
position_smoothing_speed = 1.0
script = ExtResource("2_ngbor")

[node name="Buttons" type="Node2D" parent="."]

[node name="GameOver" type="TextureButton" parent="Buttons"]
offset_left = -32.0
offset_top = -23.0
offset_right = 32.0
offset_bottom = -7.0
texture_normal = ExtResource("3_ehmse")
texture_hover = ExtResource("4_f8osw")

[node name="GoBack" type="TextureButton" parent="Buttons"]
offset_left = -67.0
offset_top = 7.0
offset_right = -3.0
offset_bottom = 23.0
texture_normal = ExtResource("5_6138s")
texture_hover = ExtResource("6_441kp")

[node name="Retry" type="TextureButton" parent="Buttons"]
offset_left = 5.0
offset_top = 8.0
offset_right = 69.0
offset_bottom = 24.0
texture_normal = ExtResource("7_4wrcy")
texture_hover = ExtResource("8_65nvh")

[node name="fade_transition" parent="." instance=ExtResource("10_441kp")]

[node name="FadeTimer" type="Timer" parent="fade_transition"]
one_shot = true

[connection signal="pressed" from="Buttons/GoBack" to="." method="_on_go_back_pressed"]
[connection signal="pressed" from="Buttons/Retry" to="." method="_on_retry_pressed"]
[connection signal="timeout" from="fade_transition/FadeTimer" to="." method="_on_fade_timer_timeout"]
